--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.29.4",
     "mongoose": "^5.11.17",
     "multer": "^1.4.4",
+    "node-cron": "^3.0.2",
     "nodemailer": "^6.6.5",
     "onesignal-node": "^3.4.0",
     "otp-generator": "^4.0.1",
